# GxLib

./: CMakeLists.txt  LICENSE.txt  README-zh.md  README.md
cmake/: GetGitDep.cmake
gx/: CMakeLists.txt
gx/include/gx/: allocator.h  debug.h  gbytearray.h  gcrypto.h  gfile.h  gglobal_memory_pool.h  ghash_sum.h  gid_allocator.h  gobject.h  gthread.h  gtime.h  gtimer.h  guuid.h  gversion.h  memalign.h  os.h  reg_gx.h  task_system.h
gx/src/: debug.cpp  g_version.cpp  gbytearray.cpp  gcrypto.cpp  gfile.cpp  gfile.mm  gglobal_memory_pool.cpp  ghash_sum.cpp  gthread.cpp  gtime.cpp  gtimer.cpp  guuid.cpp  os.cpp  reg_gx.cpp  task_system.cpp
gx/src/algorithm/: md5.cpp  md5.h  sha1.cpp  sha1.h  sha256.cpp  sha256.h
gx/src/plugin/: ref_gbytearray.cpp  ref_gcrypto.cpp  ref_gfile.cpp  ref_ggloble_memory_pool.cpp  ref_ghash_sum.cpp  ref_gobject.cpp  ref_gthread.cpp  ref_gtime.cpp  ref_gtimer.cpp  ref_guuid.cpp  ref_gversion.cpp  ref_gx.h  ref_os.cpp  ref_task_system.cpp
test/: CMakeLists.txt
test/src/: test_main.cpp
